--- a/plugin.xml
+++ b/plugin.xml
@@ -2,13 +2,13 @@
 <?eclipse version="3.4"?>
 <plugin>
 
-   <extension
+   <!--<extension
          id="simple_plugin.fragment"
          point="org.eclipse.e4.workbench.model">
       <fragment
             apply="notexists"
             uri="fragment.e4xmi">
       </fragment>
-   </extension>
+   </extension>-->
 
 </plugin>
